force-app/main/default/objects/Pending_Targets__c/Pending_Targets__c.object-meta.xml
<CustomObject>
    <label>Pending Targets</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Pending Targets Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>