force-app/main/default/objects/Pending_Targets__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pending Targets</relationshipLabel>
    <relationshipName>Pending_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>