force-app/main/default/objects/Pending_Targets__c/fields/Account_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pending_Targets1</relationshipName>
    <type>Lookup</type>
</CustomField>