force-app/main/default/objects/Pending_Targets__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Pending Targets</relationshipLabel>
    <relationshipName>Pending_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>