force-app/main/default/objects/Pending_Targets__c/fields/Target_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Per_Account__c</fullName>
    <label>Target Per Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>